<resources>
    <string name="app_name">i-Turnout</string>


    <string name="welcome_teacher">Welcome Teacher</string>
    <string name="welcome_student">Welcome Student</string>
    <string name="iturnout">i-Turnout</string>
    <string name="i_turnout">i-Turnout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome1">Welcome</string>
    <string name="todo">TODO</string>
    <string name="upload_details_of_student">Upload details of Student</string>
    <string name="upload_details_of_teacher">Upload details of Teacher</string>
    <string name="upload_details_of_courses">Upload details of Courses</string>
    <string name="upload_details_of_enrollment">Upload details of Enrollment</string>
    <string name="delete_record">Delete Record</string>
    <string name="sarvesh1">Sarvesh</string>
    <string name="upload_details">Upload Details</string>
    <string name="teacher">Teacher</string>
    <string name="courses1">Courses</string>
    <string name="upload_details1">Upload Details</string>
    <string name="enrollment">Enrollment</string>
    <string name="upload_details2">Upload Details</string>
    <string name="upload_details3">Upload Details</string>
    <string name="student">Student</string>
    <string name="delete">Delete</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="records">Records</string>
    <string name="hello_dear">Hello Dear</string>
    <string name="enter_id">Enter Id</string>
    <string name="enter_name">Enter Name</string>
    <string name="password2">Password</string>
    <string name="date">Date</string>
    <string name="enter_id1">Enter Id</string>
    <string name="enter_name1">Enter Name</string>
    <string name="password1">Password</string>
    <string name="date1">Date</string>
    <string name="submit8">Submit</string>
    <string name="submit1">Submit</string>
    <string name="submit2">Submit</string>
    <string name="enter_student_id3">Enter Student Id</string>
    <string name="enter_course_id1">Enter Course Id</string>
    <string name="submit6">submit</string>
    <string name="welcome">Welcome</string>
    <string name="sarvesh">Sarvesh</string>
    <string name="fill_details_of_student">Fill Details of Student</string>
    <string name="todo7">TODO</string>
    <string name="back">back</string>
    <string name="back1">back</string>
    <string name="back2">back</string>
    <string name="back3">back</string>
    <string name="fill_details_of_teachers">Fill Details of Teachers</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="fill_details_of_course">Fill Details of Course</string>
    <string name="enter_course_id3">Enter Course Id</string>
    <string name="enter_student_id1">Enter Student id</string>
    <string name="fill_details_of_enrollment">Fill Details of Enrollment</string>
    <string name="get">Get</string>
    <string name="notification">Notification</string>
    <string name="check">Check</string>
    <string name="attendance">Attendance</string>
    <string name="make">Make</string>
    <string name="query">Query</string>
    <string name="view1">View</string>
    <string name="courses">Courses</string>
    <string name="change5">Change</string>
    <string name="password5">Password</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Old Password</string>
    <string name="enter_new_password">New Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="query1">Query</string>
    <string name="query2">Query</string>
    <string name="enter_id3">Enter Id</string>
    <string name="content">Content</string>
    <string name="courseid">CourseId</string>
    <string name="coursename">CourseName</string>
    <string name="responed">Responed</string>
    <string name="txt">txt</string>
    <string name="text">text</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="enter_course_id">Enter Course Id</string>
    <string name="enter_student_id">Enter Student Id</string>
    <string name="makeattendance">Make Attendance</string>
    <string name="view">View</string>
    <string name="enroll_student">Enroll Student</string>
    <string name="todo9">TODO</string>
    <string name="make1">Make</string>
    <string name="attendance1">Attendance</string>
    <string name="enter_teacher_id">Enter Teacher id</string>
    <string name="title_activity_make_att_by_teacher">MakeAttByTeacher</string>
    <string name="reply">Reply</string>
    <string name="hello">hello</string>
    <string name="dialog_msg">Do you really want to delete the records?</string>
    <string name="deleting_msg">Deleting...</string>
    <string name="dialog_title">Delete</string>
    <string name="bconfirm">Confirm</string>
    <string name="bback">Back</string>
    <string name="logout1">Logout</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="search">Search..</string>
    <string name="search1">Search...</string>
    <string name="desc1">desc</string>
    <string name="ttxt1">ttxt</string>
    <string name="desc2">desc</string>
    <string name="txt3">txt</string>
    <string name="desc">desc</string>
    <string name="enter_student_id5">Enter Student Id</string>
    <string name="enter_new_enrollment">Enter New Enrollment</string>
    <string name="enter_old_enrollment">Enter Old Enrollment</string>
    <string name="text1">text,</string>

</resources>
