<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarvesh.i_turnout.StudentDetails"
    tools:layout_editor_absoluteY="25dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/fill_details_of_course"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#ffffff"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp">
            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_course_id1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/enter_course_name"
                android:inputType="textPersonName"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
               android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffffff"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/back"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/todo"
                android:onClick="back"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>