<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarvesh.i_turnout.Moderator.StudentDetails"
    tools:layout_editor_absoluteY="25dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="10dp"
               android:layout_marginLeft="10dp"
               android:hint="@string/enter_id"
               android:layout_marginTop="10dp"
               android:id="@+id/enterid"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/content"
                android:id="@+id/Qcontent"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_attach_file_black_24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                android:layout_marginStart="10dp"
                android:id="@+id/attach"/>
            <Button
                android:id="@+id/Qbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/query"
                android:textColor="#ffffff"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                app:layout_constraintVertical_bias="0.088"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>