<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    tools:layout_editor_absoluteY="25dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/changepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword"

                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:id="@+id/changepasswordnew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <EditText
                android:id="@+id/changepasswordconfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/enter_confirm_password"
                android:inputType="textPassword"

                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/changepasswordsubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/change"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                app:layout_constraintVertical_bias="0.088"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>